# Ruspy-City

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
alphazero/: __init__.py  chess_board.py  policy_value_net.py  territory_mcts.py  train.py
app/common/: __init__.py  ai_thread.py  minimax_thread.py
app/view/: play_interface.py
app/widgets/: board_widget.py
arena/: __init__.py  heatmap.ipynb  robot.py
log/: self_play.json
pretrain/: train.py
src/: lib.rs  main.rs
utils/: __init__.py  data_convert.py  data_validate.py
