[package]
name = "ruspy-city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruspy_city"
crate-type = ["cdylib"]


[profile.test]
opt-level = 3

[profile.release]
lto = true

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"]  }
rand = "0.9.1"
