[package]
name = "ruspy-city"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruspy_city"
crate-type = ["cdylib"]


[profile.test]
opt-level = 3
lto = true

[profile.release]
lto = true

[dependencies]
# flamegraph = "0.6.8"
# numpy = "0.24.0"
rand = "0.9.1"
serde_json = "1.0"
rayon = "1.10.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }