[project]
name = "ruspy-city"
version = "1.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "maturin>=1.9.1",
    "numpy>=2.2.6",
    "pyinstaller>=6.14.2",
    "pyside6>=6.9.1",
    "pyside6-fluent-widgets>=1.8.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cpu"
explicit = true

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"
